--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lqs-plugin",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": false,
   "main": "./lib/lqs-plugin.common.js",
   "scripts": {
@@ -21,13 +21,15 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.1.0"
+    "vue-property-decorator": "^8.1.0",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
-    "@vue/cli-plugin-typescript": "^3.10.0",
+    "@vue/cli-plugin-typescript": "^4.1.2",
     "@vue/cli-service": "^3.10.0",
     "node-sass": "^4.12.0",
+    "prettier": "^1.19.1",
     "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
     "vue-template-compiler": "^2.6.10"
